# functions-quickstart-rust-azd

./: .dockerignore  .funcignore  .gitignore  Cargo.toml  Dockerfile  azure.yaml  build.rs  host.json  rust-toolchain.toml
.devcontainer/: Dockerfile  devcontainer.json
infra/: main.bicep
infra/app/: api.bicep  rbac.bicep  storage-PrivateEndpoint.bicep
src/: main.rs
